# elf2pgz

./: .gitignore  .justfile  LICENSE  README.md
src/: CMakeLists.txt  main.c
